<resources>
    <string name="app_name">DroneProject</string>
    <string name="monitoring_plants_using_ariel_robots">Monitoring Plants Using Ariel Robots</string>
    <string name="sign_un">Sign In</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_in">Sign UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="or">OR</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="welcome_back_usama">Welcome Back Usama !</string>
    <string name="tap_here_to_search">Tap Here to search</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="plants">Plants</string>
    <string name="note_these_results_are_based_on_the_80_accuracy_of_pictures">Note : These results are based on the 80% accuracy of pictures</string>
    <string name="default_web_client_id">370944119419-lcf8s0uj0uhe74cckc2kt9sbekg17lm7.apps.googleusercontent.com</string>
    <string name="loading">Loading…</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="tomato">Tomato</string>
    <string name="title">Title</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="view_more">View More</string>
    <string name="disease">Disease</string>
    <string name="detail">Detail</string>
    <string name="no_analytics_to_show">No Analytics to show</string>
    <string name="plant_disease">Plant - Disease Graph</string>
    <string name="analytics">Analytics</string>
    <string name="total_plants">Total Diseases :</string>
    <string name="total_diseases">Total Plants :</string>
    <string name="_0">0</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username_referral">Username</string>
    <string name="phone_no">Phone Number</string>
    <string name="profile">Profile</string>
    <string name="drone_shots">Drone Shots</string>
</resources>