<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/monitoring_plants_using_ariel_robots"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:padding="10dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="goToSignIn"
            android:background="@drawable/dw_login_button_back"
            android:backgroundTint="@color/green"
            android:text="@string/sign_un"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <RelativeLayout
            android:id="@+id/ll_google_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:onClick="continueWithGoogle"
            android:background="@drawable/dw_login_button_back"
            android:backgroundTint="@android:color/white"
            android:padding="0dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="90dp"
                android:src="@drawable/ic_google" />

            <TextView
                android:id="@+id/tv_google_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:text="@string/continue_with_google"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold|normal" />
        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>